Cambios a las vistas

--- a/Act2PresidenteMexico/Views/Home/Biografia.cshtml
+++ b/Act2PresidenteMexico/Views/Home/Biografia.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model Act2PresidenteMexico.Models.Presidente
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -8,52 +10,56 @@
 <body>
     <header>
         <img src="~/images/logo-mexico.png" />
-        <p><a href="index.html">Presidentes de la República</a></p>
+        <p><a href="~/">Presidentes de la República</a></p>
     </header>
     <main>
-        <h2 class="titulo">Benito Pablo Juárez García</h2>
+        <h2 class="titulo">@Model.Nombre</h2>
         <div class="informacion">
-            <img class="foto" src="~/presidentes/32.jpg">
+            <img class="foto" src="~/presidentes/@(Model.Id).jpg">
             <div class="datos">
                 <div class="fila1">
                     <div>
                         <h4>Fecha de Nacimiento:</h4>
-                        <a>Fecha de Nacimiento</a>
+                        <a>@Model.FechaNacimiento.Value.ToShortDateString()</a>
                     </div>
                     <div>
                         <h4>Fecha de Fallecimiento:</h4>
-                        <a>Fecha de  Defunción</a>
+                        @if (Model.FechaFallecimiento != null)
+                        {
+                            <a>@Model.FechaFallecimiento.Value.ToShortDateString()</a>
+                        }
                     </div>
                     <div>
                         <h4>Ciudad de Nacimiento:</h4>
-                        <a>Ciudad de Nacimiento</a>
+                        <a>@Model.CiudadNacimiento</a>
                     </div>
                     <div>
                         <h4>Estado:</h4>
-                        <a>Estado</a>
+                        <a>@Model.IdEstadoRepublicaNavigation.Nombre</a>
                     </div>
                     <div>
                         <h4>Ocupación:</h4>
-                        <a>Ocupación</a>
+                        <a>@Model.Ocupacion</a>
                     </div>
                     <div>
                         <h4>Inicio de gobierno:</h4>
-                        <a>Inicio</a>
+                        <a>@Model.InicioGobierno.ToShortDateString()</a>
                     </div>
                     <div>
                         <h4>Termino de gobierno:</h4>
-                        <a>Fin</a>
+                        <a>@Model.TerminoGobierno.Value.ToShortDateString()</a>
                     </div>
                     <div>
                         <h4>Partido Político:</h4>
-                        <a><img src="~/partidos/1.jpg" height="20"> Partido</a>
+                        <a><img src="~/partidos/@(Model.IdPartidoPolitico).jpg" height="20">
+                        @Model.IdPartidoPoliticoNavigation.Nombre</a>
                     </div>
                 </div>
             </div>
         </div>
         <hr>
         <h2 class="breve">Breve Historia</h2>
-        <p class="historia">Biografía</p>
+        <p class="historia">@Model.Biografia</p>
     </main>
     <footer>
         <div class="footer">
