--- a/Act3MapCurricular/Views/Home/Info.cshtml
+++ b/Act3MapCurricular/Views/Home/Info.cshtml
@@ -11,7 +11,7 @@
 
 <div class="info">
     <img src="~/images/@(Model.Id).jpg" />
-    <a class="btn" href="~/Home/MapaC/@Model.Id">Ver mapa curricular</a>
+    <a class="btn" href="~/">Ver mapa curricular</a>
 </div>
 <div class="info">
     <dl>
