--- a/Act3MapCurricular/Views/Shared/Layout.cshtml
+++ b/Act3MapCurricular/Views/Shared/Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link href="~/estilos.css" rel="stylesheet" />
+    <link href="~/estilos/estilos.css" rel="stylesheet" />
 </head>
 <body>
     <header>
