--- a/Act4Disneypixar/Views/Shared/_Layout.cshtml
+++ b/Act4Disneypixar/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link href="~/css/font-awesome.css" rel="stylesheet">
     <link href="~/css/estilos.css" rel="stylesheet" />
     <title>Inicio | Pixar</title>
-    <link rel="icon" src="~/images/Disney_pixar.png">
+    <link rel="icon" href="icon.png">
 </head>
 
 <body class="index">
@@ -18,7 +18,7 @@
             </a>
             <ul>
 
-                <li class="selected">
+                <li>
                     <a href="~/Home/Index">Inicio</a>
                 </li>
                 <li>
@@ -26,7 +26,7 @@
                 </li>
 
                 <li>
-                    <a href="cortos.html">Cortometrajes</a>
+                    <a href="~/Home/Cortos">Cortometrajes</a>
                 </li>
             </ul>
         </nav>
@@ -60,7 +60,7 @@
                 ·
                 <a href="~/Home/Peliculas">Películas</a>
                 ·
-                <a href="Cortos.html">Cortometrajes</a>
+                <a href="~/Home/Cortos">Cortometrajes</a>
             </p>
 
             <p>&copy;Disney Pixar</p>
