--- a/Act4Disneypixar/Views/Shared/_Layout.cshtml
+++ b/Act4Disneypixar/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                     <a href="~/Home/Index">Inicio</a>
                 </li>
                 <li>
-                    <a href="~/Home/Peliculas">Películas</a>
+                    <a href="~/peliculas">Películas</a>
                 </li>
 
                 <li>
