--- a/Act4Disneypixar/Views/Shared/_Layout.cshtml
+++ b/Act4Disneypixar/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 </li>
 
                 <li>
-                    <a href="~/Home/Cortos">Cortometrajes</a>
+                    <a href="~/cortos">Cortometrajes</a>
                 </li>
             </ul>
         </nav>
