--- a/Act5SweetBakery/Views/Shared/_Layout.cshtml
+++ b/Act5SweetBakery/Views/Shared/_Layout.cshtml
@@ -16,10 +16,10 @@
                 <a href="~/Home/Index">Inicio</a>
             </li>
             <li>
-                <a href="productos.html">Productos</a>
+                <a href="~/productos">Productos</a>
             </li>
             <li>
-                <a href="recetas.html">Recetas</a>
+                <a href="~/recetas">Recetas</a>
 
             </li>
         </ul>
