--- a/ActFinalZooplanet/Views/Shared/_Layout.cshtml
+++ b/ActFinalZooplanet/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>ZooPlanet</title>
-    <link href="~/StyleSheet.css" rel="stylesheet" />
+    <link href="~/css/StyleSheet.css" rel="stylesheet" />
     <link href="~/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
