--- a/ActFinalZooplanet/wwwroot/css/StyleSheet.css
+++ b/ActFinalZooplanet/wwwroot/css/StyleSheet.css
@@ -1,5 +1,5 @@
 ﻿html, body {
-    background: url(../bg.png);
+    background: url(../backgrounds/bg.png);
     margin: 0;
     width: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -15,7 +15,7 @@ header {
     position: fixed;
     top: 0;
     width: calc(100% - 200px);
-    background: url(../bg2.png);
+    background: url(../backgrounds/bg2.png);
     border-bottom: 1px solid #9ed0a4;
 }
 
